# bevy_warp

./: .gitignore  Cargo.toml  Makefile
actors/game_logic/: Cargo.toml
actors/game_logic/src/: game.rs  lib.rs  main.rs  messaging_.rs  spawn_.rs  user.rs  ws.rs
actors/game_logic/src/client_message_handlers/: mod.rs  target_velocity_handler.rs  welcome_handler.rs
actors/game_logic/src/systems/: client_handler.rs  mod.rs
bevy-warp-wasi/: Cargo.toml
bevy-warp-wasi/src/: lib.rs  ws.rs
bevy-warp-wasi/src/bevy/: mod.rs  plugin_server.rs
bevy-warp-wasi/src/bevy/plugin_client/: mod.rs  plugin_client.rs  www.rs
bevy-warp-wasi/src/shared/: event.rs  handle.rs  mod.rs
shared/: Cargo.toml
shared/src/: bundle.rs  lib.rs  plugin.rs
shared/src/systems/: entity_to_remove.rs  lib.rs  mod.rs
shared/src/update/: target_velocity.rs
www/: Cargo.toml  Makefile.toml
www/crates/apps/client/: Cargo.toml
www/crates/apps/client/src/: main.rs
www/crates/components/protocol/: Cargo.toml
www/crates/components/protocol/src/: command.rs  event.rs  lib.rs
www/crates/libs/client-websocket/: Cargo.toml
www/crates/libs/client-websocket/src/: lib.rs
www/crates/plugins/physics-rapier/: Cargo.toml
www/crates/plugins/physics-rapier/src/: lib.rs  shape.rs
www/crates/plugins/physics-rapier/src/system/: mod.rs
www/crates/plugins/protocol/: Cargo.toml
www/crates/plugins/protocol/src/: c_.rs  lib.rs  native.rs  wasm.rs
www/crates/plugins/protocol/src/msg_handler/: game_state.rs  mod.rs  target_velocity.rs  welcome.rs
www/crates/plugins/protocol/src/startup/: mod.rs  new_ball.rs
www/crates/plugins/protocol/src/system/: camera.rs
www/public/: index.html
www/public/pkg/: boltless-client.d.ts  boltless-client.js  boltless-client_bg.wasm.d.ts
