[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {path = "../../../warp"}
tokio-tungstenite = {version = "0.18.0"}
tokio = { version = "1.23.0", features = ["rt", "macros", "net", "time", "io-util"]}
tokio-stream = { version = "0.1.1", features = ["net"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
lazy_static = "1.4.0"
bevy-warp-wasi = { path = "../../bevy-warp-wasi"}
shared = {path = "../../shared"}
bevy = { git="https://github.com/bevyengine/bevy",rev="b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", default-features = false }