[package]
name = "boltless-client"
version = "0.1.0"
authors = ["anonymous"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
plugin-protocol = { package = "boltless-plugin-protocol", path = "../../plugins/protocol", version = "0.1.0" }
plugin-physics-rapier = { package = "boltless-plugin-physics-rapier", path = "../../plugins/physics-rapier", version = "0.1.0" }
shared = { path = "../../../../shared" }
bevy = { version = "0.8.1" ,features =[]}
tracing-subscriber = "0.2.19"
log = "0.4"

[dev-dependencies]
wasm-bindgen = "0.2.69"