[package]
name = "boltless-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
log = "0.4"
shared = { path = "../../../../shared" }
enum_dispatch = "0.3.7"
serde_json = "1.0.66"
rmp-serde = "1.1.0"